<?xml version="1.0" encoding="utf-8"?><!-- Copyright 2009 Google Inc. All Rights Reserved.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:padding="8dp"
            android:text="@string/tip_add_account"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="@string/tip_add_account_content"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <EditText
                style="@style/common_edt_h48"
                android:id="@+id/account_name"
                android:hint="@string/enter_account_label"/>

            <EditText
                style="@style/common_edt_h48"
                android:id="@+id/key_value"
                android:hint="@string/enter_key_hint"
                android:inputType="textNoSuggestions|textVisiblePassword"/>

            <Spinner
                android:id="@+id/type_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:prompt="@string/type_prompt"
                android:visibility="invisible"/>

            <Button
                style="@style/common_btn_wra"
                android:id="@+id/btn_add"
                android:text="@string/button_add_account"
                android:layout_gravity="center" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
